# infintree

./: .env  .gitignore  README.md  keys.json  pyproject.toml  test.py
app/: api.py  main.py
app/core/: auth.py  iam_loader.py  permission_dependancy.py  security.py  seed.py
app/core/jwt/: issuer.py  key_store.py  verifier.py
app/db/: debs.py  models.py  session.py
app/modules/auth/: endpoints.py  repository.py  schemas.py  usecases.py
app/modules/departments/: endpoints.py  model.py  repository.py  schemas.py  usecases.py
app/modules/documents/: endpoints.py  model.py  repository.py  schemas.py  usecases.py  utilis.py
app/modules/groups/: model.py
app/modules/permissions/: model.py
app/modules/users/: model.py
app/policies/: iam_policies.yaml
